--- a/src/MovieSearch/styles.css
+++ b/src/MovieSearch/styles.css
@@ -89,8 +89,8 @@ body {
 
 .Movie img {
   width: 100%;
-  height: 300px; /* Set a fixed height */
-  object-fit: contain; /* Maintain aspect ratio */
+  height: 300px;
+  object-fit: contain;
 }
 
 .Movie p {
